--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,8 +1,21 @@
 @import 'normalize.css';
 @import 'base/_variables';
+@import 'base/_mixins';
 @import 'base/_global';
 @import 'modules/_section';
 @import 'modules/_button';
 @import 'modules/_hero';
 @import 'modules/_optin';
 @import 'modules/_who-benefits';
+@import 'modules/_course-features';
+@import 'modules/_project-features';
+@import 'modules/_video-featurette';
+@import 'modules/_custom-sprites';
+@import 'modules/_instructor';
+@import 'modules/_num';
+@import 'modules/_custom-modal';
+@import 'modules/_badge-social';
+@import 'modules/_testimonials';
+@import 'modules/_signup';
+@import 'modules/_footer';
+@import 'modules/_media-queries';
