--- a/app/assets/styles/modules/_button.css
+++ b/app/assets/styles/modules/_button.css
@@ -1,6 +1,6 @@
 /* override bootstrap css */
 
-a.btn {
+.btn {
   font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
@@ -15,3 +15,19 @@ a.btn {
   background-color: $red;
   border-color: $darkRed;
 }
+
+.btn-success {
+  background-color: $green;
+  border: none;
+}
+
+.btn-success:hover {
+  background: $darkGreen;
+}
+
+/* get rid of bootstrap default focus blue border */
+.btn:focus {
+  outline: none !important;
+}
+
+
