add up to resources

--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,11 +1,15 @@
 $green: #79b844;
 $darkGreen: #6a9b3d;
+$altGreen: #79b044;
+$lightGreen: #8bc653;
 $salmon: #dd5638;
 $blueGray: #3e4249;
+$lightGray: #cccccc;
+$borderGray: #dddddd;
+$altGray: #666666;
 $black: #101010;
 $white: #ffffff;
 $red: #dd5638;
 $darkRed: #d95131;
-$lightGray: #cccccc;
 $twitterBlue: #55acee;
 $facebookBlue: #3b5998;
