--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -19,3 +19,9 @@
 @import 'modules/_signup';
 @import 'modules/_footer';
 @import 'modules/_media-queries';
+@import 'modules/_post';
+@import 'modules/_feature-image';
+@import 'modules/_row';
+@import 'modules/_widget';
+@import 'modules/_forms';
+@import 'modules/_comments';
